--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>FIND THE NUMBER</h1>
+        <h1>FIND THE NUMBER (beetwen 1000 and 9999)</h1>
         <button class="btn" onclick="getNumber();">Input the Number</button>
         <p id="demo">Result</p>
         <script src="index.js"></script>
