--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>FIND THE NUMBER</h1>
         <!--  <button class="btn" onclick="getNumber();">Input the Number</button>  -->
         <div>
-            <input class="demo" id="input" type="text">
+            <input id="input" type="text">
             <button id="check_it">CHECK</button>
         </div>
         <p id="par" class="para">Result</p>
